# illumos-fim

./: Cargo.toml  README.md
config/: config.yml
pkg/: ifim.xml
src/: config.rs  entry.rs  hash.rs  main.rs  utils.rs
