[package]
name = "ifim"
version = "1.0.0"
authors = ["Tintri by DDN"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yaml-rust = "0.4"
sha3 = "0.10.0"
hex = "0.4.3"
notify = "5.0.0"
log = "0.4.11"
simplelog = "0.12.0"
gethostname = "0.4.0"
itertools = "0.10.3"
uuid = { version = "1.0.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3.21"
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
serde_json = { version = "1.0.79", features = ["preserve_order"]}
time = "0.3.9"
ctrlc = { version = "3.2", features = ["termination"] }
colored = "2.0.0"

[dev-dependencies]
tokio-test = "*"
